Add images from url support.
Update to version 1.0.1

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = vg_image_viewer
-version = 1.0
+version = 1.0.1
 
 [options]
-packages = vg_image_viewer
+packages = find:
 install_requires =
     ipython
 	numpy
